[package]
name = "turbine"
version = "0.1.0"
edition = "2024"
authors = ["nadmax <maximilien.nadji@pm.me>"]
license = "Apache-2.0"
repository = "https://github.com/nadmax/turbine"
readme = "README.md"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
nix = "0.30.1"
libc = "0.2.174"
users = "0.11.0"
signal-hook = "0.3.18"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }

[lib]
name = "turbine"
path = "src/lib.rs"

[[bin]]
name = "turbine"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.release]
strip = true
opt-level = "s"
overflow-checks = false
lto = true
codegen-units = 1
panic = "abort"
